# rusty_pinterest_scraper

./: Cargo.toml  README.md  example.csv
src/: main.rs
